...
      <View style={styles.plusButton}>
        <AntDesign name='plus' size={20} color='#8B8B8B' />
      </View>
      <Composer
        {...props}
        textInputStyle={styles.composer}
        placeholder='Message'
      />
      {props.text.trim() ? (
        <Send {...props} containerStyle={styles.sendContainer}>
          <View style={styles.sendButton}>
            <Feather name='send' size={24} color='white' />
          </View>
        </Send>
      ) : null}
    </View>
  )

...
