{
  "global": {
    "choose": "Choisir",
    "birthday": "Anniversaire",
    "informations": "Informations",
    "share": "Partager",
    "download": "Télécharger",
    "dogs": "Chiens",
    "rides": "Balades",
    "formations": "Formations",
    "medical": "Santé",
    "weDontKnowMoreAbout": "Nous n'en savons pas plus sur",
    "accept": "Accepter",
    "refuse": "Refuser",
    "year": "An",
    "years": "ans",
    "back": "Retour",
    "male": "Mâle",
    "female": "Femelle",
    "map": "Carte",
    "search": "Rechercher",
    "about": "À propos",
    "step": "Étape",
    "error": "Erreur",
    "noDescriptionFor": "Aucune description pour",
    "continue": "Continuer",
    "disconected": "Se déconnecter",
    "skip": "Passer",
    "validate": "Valider",
    "history": "Historique",
    "loading": "Chargement...",
    "success": "Succès"
  },
  "tabbar": {
    "home": "Accueil",
    "formation": "Formation",
    "medical": "Médical",
    "profile": "Profil"
  },
  "account": {
    "logout": "Se déconnecter",
    "account": "Compte",
    "editProfile": "Modifier mon profil",
    "shareProfile": "Partager mon profil",
    "myDogs": "Mes chiens",
    "friends": "Amis",
    "favorites": "Favoris",
    "createdRides": "Les balades créées",
    "completedFormations": "Les formations passées",
    "completedActivities": "Les activités réalisées",
    "meetings": "Mes rencontres",
    "myBones": "Mes os"
  },
  "auth": {
    "login": "Connexion",
    "signIn": "Se connecter",
    "signInLink": "Se connecter",
    "email": "Email",
    "password": "Mot de passe",
    "forgotPassword": "Mot de passe oublié",
    "signUp": "S'inscrire",
    "noAccount": "Vous n'avez pas de compte ?",
    "alreadyAccount": "Vous avez déjà un compte ?",
    "signUpLink": "Créer un compte",
    "fieldEmpty": "Tous les champs sont obligatoires"
  },
  "home": {
    "welcome": "Salut",
    "timeToRide": "C'est le moment de se balader ?"
  },
  "formation": {
    "formation": "Formation",
    "yourFormations": "Vos formations",
    "forYou": "Pour vous",
    "allFormations": "Toutes nos formations",
    "advice": "Avis",
    "completeFormation": "Formation complète",
    "noFormations": "Aucune formation trouvée"
  },
  "module": {
    "materialNeeded": "Matériel nécessaire",
    "noMaterialNeeded": "Pas de matériel nécessaire",
    "allModulesNotCompleted": "Tous les modules n'ont pas été complétés",
    "nextModule": "Module suivant",
    "lessons": "Leçons",
    "training": "Entrainement"
  },
  "lesson": {
    "lesson": "Leçon",
    "nextStep": "Étape suivante"
  },
  "medical": {
    "healthRecord": "Carnet de santé",
    "healthRecordDescription": "Choisissez votre compagnon pour découvrir toutes ses informations de santé, centralisé en 1 seule application.",
    "documents": "Documents",
    "vaccines": "Vaccins",
    "weight": "Poids",
    "height": "Taille",
    "callbacks": {
      "callbacks": "Rappels"
    }
  },
  "dog": {
    "breed": "Race",
    "sex": "Sexe",
    "aboutOf": "À propos de",
    "behavior": "Comportement",
    "noBehavior": "Aucun comportement particulier connu.",
    "myMaster": "Mon maître",
    "nextRide": "Sa prochaine balade",
    "noNextRide": "Aucune prochaine balade de prévue.",
    "rideInvitation": "On se balade ?"
  },
  "dogCreation": {
    "dominance": "Dominance",
    "dominant": "Dominant",
    "neutral": "Neutre",
    "dominated": "Dominé",
    "whatIsYourDogName": "Quel est le nom de votre chien ?",
    "dogNameQuestion": "Quel est le nom de votre chien ?",
    "addDogName": "Ajouter le nom de votre chien",
    "dogSexQuestion": "Votre chien est un male ou une femelle ?",
    "dogBreedQuestion": "Quel est la race de votre chien ?",
    "dogAgeQuestion": "Quel est l'âge de votre chien ?",
    "dogBehaviorQuestion": "Votre chien est :",
    "dogAddPhoto": "Ajouter une photo de votre chien",
    "addDogAge": "Ajouter l'âge de votre chien",
    "addDogBreed": "Sélectionner sa race",
    "wouldLikeKnowPet": "Nous aimerions connaitre votre animal",
    "dogCreationSuccess": "Chien créé avec succès",
    "yourDogIsCreated": "Votre chien a été ajouté avec succès",
    "dogCreationError": "Erreur lors de la création du chien",
    "dogCreationErrorDescription": "Veuillez réessayer ou contacter l'assistance"
  },
  "ride": {
    "start": "Départ",
    "duration": "Durée",
    "rideCreator": "Créateur de la balade",
    "joinTheRide": "Rejoindre la balade",
    "route": "Parcours",
    "participants": "Participants",
    "activities": "Activités",
    "joinPlaceholder": "Bonjour, j'habite proche de ..., j'ai l'habitude de me balader dans le parc ... . Quelles sont vos habitudes à vous et votre loulou ?",
    "joinDescription": "Contactez la propriétaire pour organiser une rencontre entre"
  },
  "rideCreation": {
    "newRide": "Une nouvelle balade ?",
    "aloneRide": "Balade seul",
    "groupRide": "Balade en groupe",
    "rideLocation": "Lieu de la balade",
    "rideLocationPlaceholder": "Entrez votre destination",
    "rideType": "Le type de balade",
    "rideDifficulty": "La difficulté de la balade",
    "rideDuration": "La durée de la balade",
    "forest": "Forêt",
    "city": "Ville",
    "beach": "Plage",
    "park": "Parc",
    "rideParticipantsNumber": "Nombre de participants",
    "rideCreationSuccess": "Balade créée avec succès"
  },
  "discussion": {
    "message": "Message",
    "messages": "Messages",
    "newMessage": "Nouvelle conversation",
    "createGroupDiscussion": "Créer une discussion de groupe",
    "sugest": "Suggestions",
    "noMessages": "Aucun message",
    "sendMessageToStart": "Envoyez un message pour commencer une conversation."
  },
  "profile": {
    "addFriend": "Ajouter en amie",
    "write": "Écrire",
    "hisDogs": "Ses chiens"
  },
  "documents": {
    "myDocuments": "Mes documents",
    "prescription": "Ordonnance",
    "facture": "Facture"
  },
  "months": {
    "0": "Janvier",
    "1": "Février",
    "2": "Mars",
    "3": "Avril",
    "4": "Mai",
    "5": "Juin",
    "6": "Juillet",
    "7": "Août",
    "8": "Septembre",
    "9": "Octobre",
    "10": "Novembre",
    "11": "Décembre"
  },
  "notification": {
    "notifications": "Notifications",
    "lastDays": "Derniers jours",
    "friendRequest": "Souhaite être amie avec vous",
    "rideCreation": "A créé une nouvelle balade",
    "rideRequest": "Souhaite faire une balade avec vous",
    "noNotifications": "Aucune notification",
    "request_accepted": "Demande acceptée",
    "request_rejected": "Demande refusée",
    "you_are_now_friends": "Vous êtes désormais amis",
    "ride_request_accepted": "Demande de balade acceptée",
    "ride_request_accepted_message": "On se balade ensemble !",
    "error_accepting_ride": "Erreur lors de l'acceptation de la demande de balade"
  },
  "onboarding": {
    "onboardingRide": "Découvrez les meilleurs itinéraires de promenade et rencontrez d'autres chiens !",
    "onboardingFormation": "Profitez de l'accès à vie. Formez-vous et apprenez à votre rythme avec des cours sur l'éducation en ligne.",
    "onboardingMedical": "Suivez et gérez la santé de votre chien en toute simplicité avec son carnet de santé numérique."
  },
  "height": {
    "heightTracking": "Suivi de la taille"
  },
  "weight": {
    "weightTracking": "Suivi du poids"
  },
  "filter": {
    "title": "Filtres",
    "clear": "Effacer",
    "confirm": "Confirmer",
    "sex": "Sexe",
    "male": "Mâle",
    "female": "Femelle",
    "dominance": "Dominance",
    "neutral": "Neutre",
    "dominant": "Dominant",
    "dominated": "Dominé",
    "activityType": "Type d'activité",
    "forest": "Forêt",
    "city": "Ville",
    "beach": "Plage"
  }
}
