appId: com.konylepanini.harmony-paws
---
- import: maestro/open-app.yaml

- tapOn: "Email"
- inputText: "nicolas.borlet7@gmail.com"
- tapOn: "retour"
- tapOn: "Mot de passe"
- inputText: "Nicolas.73600"
- tapOn: "S'inscrire"
